# CMakeProject_search_engine

./: CMakeLists.txt  CMakeProject_search_engine.cpp  CMakeProject_search_engine.h  README.md
tests/: test_search_engine.cpp
